version/0.37/_sources/api/solver/_autosummary/settings/surfaces_15.rst.txt
:orphan:

.. _surfaces_15:

surfaces
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.surfaces_15
    :show-inheritance:

.. rubric:: Arguments

======================================   ===================================================

Argument                                                                             Summary

======================================   ===================================================
:ref:`surface_names <surface_names_1>`       The list of surfaces to set color and material.

:ref:`color <color_6>`                                                        'color' child.

:ref:`material <material_8>`                                               'material' child.

======================================   ===================================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`by_surface <by_surface>`       'by_surface' child.

==============================   =======================

